# local-semantic-search

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  knowledge.json  pyproject.toml
hermes_know/: __init__.py  cli.py  core.py  tool.py
src/: embed.rs  main.rs  search.rs  storage.rs
