[project]
name = "hermes-know"
version = "0.2.0"
description = "Local semantic search for project knowledge bases — Hermes Agent tool + CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "scraix" },
]

dependencies = [
    "fastembed>=0.4,<1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
cli = [
    "fastembed>=0.4,<1.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/scraix/local-semantic-search"
Repository = "https://github.com/scraix/local-semantic-search"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_know*"]
